# Destroy-all-humans-Re-Enlighted

./: .gitmodules  CMakeLists.txt  README.md
POTFRecomp/: CMakeLists.txt
POTFRecomp/api/: POTF.h
POTFRecomp/apu/: audio.h
POTFRecompLib/: CMakeLists.txt
POTFRecompLib/config/: POTF.toml  switch_table.toml
docs/: BUILDING.md
tools/: CMakeLists.txt
tools/x_decompress/: CMakeLists.txt
